k8s/tailscale/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tailscale
  namespace: tailscale
spec:
  podSelector:
    matchLabels:
      app: tailscale
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress:
    - {}
